include/coquic/ffi/core.h

typedef uint64_t coquic_connection_handle_t;
typedef uint64_t coquic_route_handle_t;
typedef uint64_t coquic_stream_id_t;
typedef uint8_t coquic_role_t;
typedef uint8_t coquic_congestion_control_t;
typedef uint8_t coquic_ecn_codepoint_t;
typedef uint8_t coquic_state_change_t;
typedef uint8_t coquic_local_error_code_t;
typedef uint8_t coquic_lifecycle_t;
typedef uint8_t coquic_migration_reason_t;
typedef uint8_t coquic_zero_rtt_status_t;
typedef uint8_t coquic_packet_inspection_direction_t;
typedef uint8_t coquic_packet_inspection_packet_type_t;
typedef uint8_t coquic_connection_input_kind_t;
typedef uint8_t coquic_effect_kind_t;
typedef struct coquic_bytes_view {
    const uint8_t *data;
    size_t length;
} coquic_bytes_view_t;
typedef struct coquic_bytes {
    const uint8_t *data;
    size_t length;
} coquic_bytes_t;
typedef struct coquic_optional_route_handle {
    uint8_t has_value;
    coquic_route_handle_t value;
} coquic_optional_route_handle_t;
typedef struct coquic_optional_connection_handle {
    uint8_t has_value;
    coquic_connection_handle_t value;
} coquic_optional_connection_handle_t;
typedef struct coquic_optional_stream_id {
    uint8_t has_value;
    coquic_stream_id_t value;
} coquic_optional_stream_id_t;
typedef struct coquic_optional_u64 {
    uint8_t has_value;
    uint64_t value;
} coquic_optional_u64_t;
typedef struct coquic_tls_identity {
    const char *certificate_pem;
    size_t certificate_pem_length;
    const char *private_key_pem;
    size_t private_key_pem_length;
} coquic_tls_identity_t;
typedef struct coquic_zero_rtt_config {
    uint8_t attempt;
    uint8_t allow;
    coquic_bytes_t application_context;
} coquic_zero_rtt_config_t;
typedef struct coquic_orphan_zero_rtt_buffer_config {
    size_t max_packets;
    size_t max_bytes;
    coquic_time_us_t max_age_us;
} coquic_orphan_zero_rtt_buffer_config_t;
typedef struct coquic_transport_config {
    uint64_t max_idle_timeout;
    uint64_t max_udp_payload_size;
    uint8_t pmtud_enabled;
    size_t pmtud_base_datagram_size;
    size_t pmtud_max_datagram_size;
    uint64_t active_connection_id_limit;
    uint8_t disable_active_migration;
    uint64_t ack_delay_exponent;
    uint64_t max_ack_delay;
    uint64_t ack_eliciting_threshold;
    uint64_t initial_max_data;
    uint64_t initial_max_stream_data_bidi_local;
    uint64_t initial_max_stream_data_bidi_remote;
    uint64_t initial_max_stream_data_uni;
    uint64_t initial_max_streams_bidi;
    uint64_t initial_max_streams_uni;
    uint64_t max_datagram_frame_size;
    coquic_congestion_control_t congestion_control;
    uint8_t enable_hystart_plus_plus;
    uint8_t send_stream_fairness;
    uint8_t enable_latency_spin_bit;
    uint8_t grease_reserved_versions;
    uint8_t grease_quic_bit;
    uint8_t enable_optimistic_ack_mitigation;
} coquic_transport_config_t;
typedef struct coquic_endpoint_config {
    size_t size;
    coquic_role_t role;
    const uint32_t *supported_versions;
    size_t supported_versions_count;
    uint8_t verify_peer;
    uint8_t retry_enabled;
    const char *application_protocol;
    size_t application_protocol_length;
    const coquic_tls_identity_t *identity;
    coquic_transport_config_t transport;
    size_t max_outbound_datagram_size;
    coquic_zero_rtt_config_t zero_rtt;
    uint8_t emit_shared_receive_stream_data;
    uint8_t enable_packet_inspection;
    uint8_t allow_peer_address_change;
    size_t max_server_connections;
    uint8_t enable_out_of_order_receive;
    coquic_orphan_zero_rtt_buffer_config_t orphan_zero_rtt_buffer;
} coquic_endpoint_config_t;
typedef struct coquic_resumption_state {
    coquic_bytes_t serialized;
} coquic_resumption_state_t;
typedef struct coquic_client_connection_config {
    size_t size;
    coquic_bytes_t source_connection_id;
    coquic_bytes_t initial_destination_connection_id;
    coquic_bytes_t original_destination_connection_id;
    uint8_t has_original_destination_connection_id;
    coquic_bytes_t retry_source_connection_id;
    uint8_t has_retry_source_connection_id;
    coquic_bytes_t retry_token;
    uint32_t original_version;
    uint32_t initial_version;
    uint8_t reacted_to_version_negotiation;
    const char *server_name;
    size_t server_name_length;
    const coquic_resumption_state_t *resumption_state;
    coquic_zero_rtt_config_t zero_rtt;
} coquic_client_connection_config_t;
typedef struct coquic_path_mtu_update {
    size_t size;
    coquic_optional_route_handle_t route_handle;
    size_t max_udp_payload_size;
} coquic_path_mtu_update_t;
typedef struct coquic_send_stream_data {
    size_t size;
    coquic_stream_id_t stream_id;
    coquic_bytes_t bytes;
    uint8_t fin;
    int32_t priority;
} coquic_send_stream_data_t;
typedef struct coquic_send_datagram_data {
    size_t size;
    coquic_bytes_t bytes;
    int32_t priority;
} coquic_send_datagram_data_t;
typedef struct coquic_reset_stream {
    size_t size;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
} coquic_reset_stream_t;
typedef struct coquic_stop_sending {
    size_t size;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
} coquic_stop_sending_t;
typedef struct coquic_close_connection {
    size_t size;
    uint64_t application_error_code;
    const char *reason_phrase;
    size_t reason_phrase_length;
} coquic_close_connection_t;
typedef struct coquic_request_connection_migration {
    size_t size;
    coquic_route_handle_t route_handle;
    coquic_migration_reason_t reason;
    coquic_bytes_t address_validation_identity;
} coquic_request_connection_migration_t;
typedef struct coquic_connection_input {
    coquic_connection_input_kind_t kind;
    union {
        coquic_send_stream_data_t send_stream;
        coquic_send_datagram_data_t send_datagram;
        coquic_reset_stream_t reset_stream;
        coquic_stop_sending_t stop_sending;
        coquic_close_connection_t close;
        coquic_request_connection_migration_t request_migration;
    } as;
} coquic_connection_input_t;
typedef struct coquic_local_error {
    coquic_optional_connection_handle_t connection;
    coquic_local_error_code_t code;
    coquic_optional_stream_id_t stream_id;
} coquic_local_error_t;
typedef struct coquic_send_datagram_effect {
    coquic_connection_handle_t connection;
    coquic_optional_route_handle_t route_handle;
    coquic_bytes_view_t bytes;
    coquic_ecn_codepoint_t ecn;
    uint8_t is_pmtu_probe;
} coquic_send_datagram_effect_t;
typedef struct coquic_receive_stream_data_effect {
    coquic_connection_handle_t connection;
    coquic_stream_id_t stream_id;
    uint64_t offset;
    coquic_bytes_view_t bytes;
    uint8_t fin;
    coquic_optional_u64_t final_size;
} coquic_receive_stream_data_effect_t;
typedef struct coquic_receive_datagram_data_effect {
    coquic_connection_handle_t connection;
    coquic_bytes_view_t bytes;
} coquic_receive_datagram_data_effect_t;
typedef struct coquic_peer_reset_stream_effect {
    coquic_connection_handle_t connection;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
    uint64_t final_size;
} coquic_peer_reset_stream_effect_t;
typedef struct coquic_peer_stop_sending_effect {
    coquic_connection_handle_t connection;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
} coquic_peer_stop_sending_effect_t;
typedef struct coquic_state_event_effect {
    coquic_connection_handle_t connection;
    coquic_state_change_t change;
} coquic_state_event_effect_t;
typedef struct coquic_connection_lifecycle_event_effect {
    coquic_connection_handle_t connection;
    coquic_lifecycle_t event;
} coquic_connection_lifecycle_event_effect_t;
typedef struct coquic_preferred_address {
    uint8_t ipv4_address[4];
    uint16_t ipv4_port;
    uint8_t ipv6_address[16];
    uint16_t ipv6_port;
    coquic_bytes_view_t connection_id;
    uint8_t stateless_reset_token[16];
} coquic_preferred_address_t;
typedef struct coquic_peer_preferred_address_available_effect {
    coquic_connection_handle_t connection;
    coquic_preferred_address_t preferred_address;
} coquic_peer_preferred_address_available_effect_t;
typedef struct coquic_resumption_state_available_effect {
    coquic_connection_handle_t connection;
    coquic_bytes_view_t serialized;
} coquic_resumption_state_available_effect_t;
typedef struct coquic_zero_rtt_status_event_effect {
    coquic_connection_handle_t connection;
    coquic_zero_rtt_status_t status;
} coquic_zero_rtt_status_event_effect_t;
typedef struct coquic_packet_inspection_effect {
    coquic_connection_handle_t connection;
    coquic_packet_inspection_direction_t direction;
    coquic_packet_inspection_packet_type_t packet_type;
    uint64_t datagram_id;
    size_t datagram_length;
    size_t datagram_offset;
    size_t packet_length;
    uint32_t version;
    coquic_bytes_view_t destination_connection_id;
    coquic_bytes_view_t source_connection_id;
    coquic_bytes_view_t token;
    uint8_t spin_bit;
    uint8_t key_phase;
    uint8_t packet_number_length;
    uint64_t packet_number;
    coquic_bytes_view_t encrypted_packet;
    coquic_bytes_view_t plaintext_payload;
} coquic_packet_inspection_effect_t;
typedef struct coquic_new_token_available_effect {
    coquic_connection_handle_t connection;
    coquic_bytes_view_t token;
} coquic_new_token_available_effect_t;
typedef struct coquic_effect {
    coquic_effect_kind_t kind;
    union {
        coquic_send_datagram_effect_t send_datagram;
        coquic_receive_stream_data_effect_t receive_stream_data;
        coquic_receive_datagram_data_effect_t receive_datagram_data;
        coquic_peer_reset_stream_effect_t peer_reset_stream;
        coquic_peer_stop_sending_effect_t peer_stop_sending;
        coquic_state_event_effect_t state_event;
        coquic_connection_lifecycle_event_effect_t connection_lifecycle_event;
        coquic_peer_preferred_address_available_effect_t peer_preferred_address_available;
        coquic_resumption_state_available_effect_t resumption_state_available;
        coquic_zero_rtt_status_event_effect_t zero_rtt_status_event;
        coquic_packet_inspection_effect_t packet_inspection;
        coquic_new_token_available_effect_t new_token_available;
    } as;
} coquic_effect_t;
COQUIC_FFI_API uint32_t coquic_ffi_abi_version(void);
COQUIC_FFI_API void coquic_transport_config_init(coquic_transport_config_t *config);
COQUIC_FFI_API void coquic_endpoint_config_init(coquic_endpoint_config_t *config);
COQUIC_FFI_API void coquic_client_connection_config_init(coquic_client_connection_config_t *config);