include/coquic/ffi/http3.h

typedef uint16_t coquic_http3_error_code_t;
typedef struct coquic_http3_optional_u64 {
    uint8_t has_value;
    uint64_t value;
} coquic_http3_optional_u64_t;
typedef struct coquic_http3_settings {
    size_t size;
    uint64_t qpack_max_table_capacity;
    uint64_t qpack_blocked_streams;
    coquic_http3_optional_u64_t max_field_section_size;
    uint8_t enable_connect_protocol;
    uint8_t h3_datagram;
} coquic_http3_settings_t;
typedef struct coquic_http3_client_config {
    size_t size;
    coquic_http3_settings_t local_settings;
    uint8_t has_remembered_peer_settings;
    coquic_http3_settings_t remembered_peer_settings;
} coquic_http3_client_config_t;
typedef struct coquic_http3_server_config {
    size_t size;
    coquic_http3_settings_t local_settings;
} coquic_http3_server_config_t;
typedef struct coquic_http3_field {
    const char *name;
    size_t name_length;
    const char *value;
    size_t value_length;
} coquic_http3_field_t;
typedef struct coquic_http3_field_view {
    coquic_bytes_view_t name;
    coquic_bytes_view_t value;
} coquic_http3_field_view_t;
typedef struct coquic_http3_request_head {
    size_t size;
    const char *method;
    size_t method_length;
    const char *scheme;
    size_t scheme_length;
    const char *authority;
    size_t authority_length;
    const char *path;
    size_t path_length;
    coquic_http3_optional_u64_t content_length;
    const coquic_http3_field_t *headers;
    size_t headers_count;
    uint8_t has_protocol;
    const char *protocol;
    size_t protocol_length;
} coquic_http3_request_head_t;
typedef struct coquic_http3_response_head {
    size_t size;
    uint16_t status;
    coquic_http3_optional_u64_t content_length;
    const coquic_http3_field_t *headers;
    size_t headers_count;
} coquic_http3_response_head_t;
typedef struct coquic_http3_request {
    size_t size;
    coquic_http3_request_head_t head;
    coquic_bytes_t body;
    const coquic_http3_field_t *trailers;
    size_t trailers_count;
} coquic_http3_request_t;
typedef struct coquic_http3_request_head_view {
    coquic_bytes_view_t method;
    coquic_bytes_view_t scheme;
    coquic_bytes_view_t authority;
    coquic_bytes_view_t path;
    uint8_t has_protocol;
    coquic_bytes_view_t protocol;
    coquic_http3_optional_u64_t content_length;
    const coquic_http3_field_view_t *headers;
    size_t headers_count;
} coquic_http3_request_head_view_t;
typedef struct coquic_http3_response_head_view {
    uint16_t status;
    coquic_http3_optional_u64_t content_length;
    const coquic_http3_field_view_t *headers;
    size_t headers_count;
} coquic_http3_response_head_view_t;
typedef struct coquic_http3_request_view {
    coquic_http3_request_head_view_t head;
    coquic_bytes_view_t body;
    const coquic_http3_field_view_t *trailers;
    size_t trailers_count;
} coquic_http3_request_view_t;
typedef struct coquic_http3_response_view {
    const coquic_http3_response_head_view_t *interim_heads;
    size_t interim_head_count;
    coquic_http3_response_head_view_t head;
    coquic_bytes_view_t body;
    const coquic_http3_field_view_t *trailers;
    size_t trailers_count;
} coquic_http3_response_view_t;
typedef struct coquic_http3_client_response_event {
    coquic_stream_id_t stream_id;
    coquic_http3_request_view_t request;
    coquic_http3_response_view_t response;
} coquic_http3_client_response_event_t;
typedef struct coquic_http3_client_request_error_event {
    coquic_stream_id_t stream_id;
    coquic_http3_request_view_t request;
    uint64_t application_error_code;
} coquic_http3_client_request_error_event_t;
typedef struct coquic_http3_server_request_cancelled_event {
    coquic_stream_id_t stream_id;
    uint8_t has_head;
    coquic_http3_request_head_view_t head;
    coquic_bytes_view_t body;
    const coquic_http3_field_view_t *trailers;
    size_t trailers_count;
    uint64_t application_error_code;
} coquic_http3_server_request_cancelled_event_t;
typedef struct coquic_http3_error {
    coquic_http3_error_code_t code;
    coquic_optional_stream_id_t stream_id;
    char *detail_buffer;
    size_t detail_buffer_capacity;
    size_t detail_length;
    uint8_t detail_truncated;
} coquic_http3_error_t;