bindings/rust/coquic/src/ffi.rs


#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_path_mtu_update_t {
    pub size: usize,
    pub route_handle: coquic_optional_route_handle_t,
    pub max_udp_payload_size: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_send_stream_data_t {
    pub size: usize,
    pub stream_id: coquic_stream_id_t,
    pub bytes: coquic_bytes_t,
    pub fin: u8,
    pub priority: i32,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_send_datagram_data_t {
    pub size: usize,
    pub bytes: coquic_bytes_t,
    pub priority: i32,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_reset_stream_t {
    pub size: usize,
    pub stream_id: coquic_stream_id_t,
    pub application_error_code: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_stop_sending_t {
    pub size: usize,
    pub stream_id: coquic_stream_id_t,
    pub application_error_code: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_close_connection_t {
    pub size: usize,
    pub application_error_code: u64,
    pub reason_phrase: *const c_char,
    pub reason_phrase_length: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_request_connection_migration_t {
    pub size: usize,
    pub route_handle: coquic_route_handle_t,
    pub reason: coquic_migration_reason_t,
    pub address_validation_identity: coquic_bytes_t,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub union coquic_connection_input_union_t {
    pub send_stream: coquic_send_stream_data_t,
    pub send_datagram: coquic_send_datagram_data_t,
    pub reset_stream: coquic_reset_stream_t,
    pub stop_sending: coquic_stop_sending_t,
    pub close: coquic_close_connection_t,
    pub request_migration: coquic_request_connection_migration_t,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct coquic_connection_input_t {
    pub kind: coquic_connection_input_kind_t,
    pub as_: coquic_connection_input_union_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_local_error_t {
    pub connection: coquic_optional_connection_handle_t,
    pub code: coquic_local_error_code_t,
    pub stream_id: coquic_optional_stream_id_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_send_datagram_effect_t {
    pub connection: coquic_connection_handle_t,
    pub route_handle: coquic_optional_route_handle_t,
    pub bytes: coquic_bytes_view_t,
    pub ecn: coquic_ecn_codepoint_t,
    pub is_pmtu_probe: u8,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_receive_stream_data_effect_t {
    pub connection: coquic_connection_handle_t,
    pub stream_id: coquic_stream_id_t,
    pub offset: u64,
    pub bytes: coquic_bytes_view_t,
    pub fin: u8,
    pub final_size: coquic_optional_u64_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_receive_datagram_data_effect_t {
    pub connection: coquic_connection_handle_t,
    pub bytes: coquic_bytes_view_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_peer_reset_stream_effect_t {
    pub connection: coquic_connection_handle_t,
    pub stream_id: coquic_stream_id_t,
    pub application_error_code: u64,
    pub final_size: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_peer_stop_sending_effect_t {
    pub connection: coquic_connection_handle_t,
    pub stream_id: coquic_stream_id_t,
    pub application_error_code: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_state_event_effect_t {
    pub connection: coquic_connection_handle_t,
    pub change: coquic_state_change_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_connection_lifecycle_event_effect_t {
    pub connection: coquic_connection_handle_t,
    pub event: coquic_lifecycle_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_preferred_address_t {
    pub ipv4_address: [u8; 4],
    pub ipv4_port: u16,
    pub ipv6_address: [u8; 16],
    pub ipv6_port: u16,
    pub connection_id: coquic_bytes_view_t,
    pub stateless_reset_token: [u8; 16],
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_peer_preferred_address_available_effect_t {
    pub connection: coquic_connection_handle_t,
    pub preferred_address: coquic_preferred_address_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_resumption_state_available_effect_t {
    pub connection: coquic_connection_handle_t,
    pub serialized: coquic_bytes_view_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_zero_rtt_status_event_effect_t {
    pub connection: coquic_connection_handle_t,
    pub status: coquic_zero_rtt_status_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_packet_inspection_effect_t {
    pub connection: coquic_connection_handle_t,
    pub direction: coquic_packet_inspection_direction_t,
    pub packet_type: coquic_packet_inspection_packet_type_t,
    pub datagram_id: u64,
    pub datagram_length: usize,
    pub datagram_offset: usize,
    pub packet_length: usize,
    pub version: u32,
    pub destination_connection_id: coquic_bytes_view_t,
    pub source_connection_id: coquic_bytes_view_t,
    pub token: coquic_bytes_view_t,
    pub spin_bit: u8,
    pub key_phase: u8,
    pub packet_number_length: u8,
    pub packet_number: u64,
    pub encrypted_packet: coquic_bytes_view_t,
    pub plaintext_payload: coquic_bytes_view_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_new_token_available_effect_t {
    pub connection: coquic_connection_handle_t,
    pub token: coquic_bytes_view_t,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub union coquic_effect_union_t {
    pub send_datagram: coquic_send_datagram_effect_t,
    pub receive_stream_data: coquic_receive_stream_data_effect_t,
    pub receive_datagram_data: coquic_receive_datagram_data_effect_t,
    pub peer_reset_stream: coquic_peer_reset_stream_effect_t,
    pub peer_stop_sending: coquic_peer_stop_sending_effect_t,
    pub state_event: coquic_state_event_effect_t,
    pub connection_lifecycle_event: coquic_connection_lifecycle_event_effect_t,
    pub peer_preferred_address_available: coquic_peer_preferred_address_available_effect_t,
    pub resumption_state_available: coquic_resumption_state_available_effect_t,
    pub zero_rtt_status_event: coquic_zero_rtt_status_event_effect_t,
    pub packet_inspection: coquic_packet_inspection_effect_t,
    pub new_token_available: coquic_new_token_available_effect_t,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct coquic_effect_t {
    pub kind: coquic_effect_kind_t,
    pub as_: coquic_effect_union_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_optional_u64_t {
    pub has_value: u8,
    pub value: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_settings_t {
    pub size: usize,
    pub qpack_max_table_capacity: u64,
    pub qpack_blocked_streams: u64,
    pub max_field_section_size: coquic_http3_optional_u64_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_client_config_t {
    pub size: usize,
    pub local_settings: coquic_http3_settings_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_server_config_t {
    pub size: usize,
    pub local_settings: coquic_http3_settings_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_field_t {
    pub name: *const c_char,
    pub name_length: usize,
    pub value: *const c_char,
    pub value_length: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_field_view_t {
    pub name: coquic_bytes_view_t,
    pub value: coquic_bytes_view_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_request_head_t {
    pub size: usize,
    pub method: *const c_char,
    pub method_length: usize,
    pub scheme: *const c_char,
    pub scheme_length: usize,
    pub authority: *const c_char,
    pub authority_length: usize,
    pub path: *const c_char,
    pub path_length: usize,
    pub content_length: coquic_http3_optional_u64_t,
    pub headers: *const coquic_http3_field_t,
    pub headers_count: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_response_head_t {
    pub size: usize,
    pub status: u16,
    pub content_length: coquic_http3_optional_u64_t,
    pub headers: *const coquic_http3_field_t,
    pub headers_count: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_request_t {
    pub size: usize,
    pub head: coquic_http3_request_head_t,
    pub body: coquic_bytes_t,
    pub trailers: *const coquic_http3_field_t,
    pub trailers_count: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_request_head_view_t {
    pub method: coquic_bytes_view_t,
    pub scheme: coquic_bytes_view_t,
    pub authority: coquic_bytes_view_t,
    pub path: coquic_bytes_view_t,
    pub content_length: coquic_http3_optional_u64_t,
    pub headers: *const coquic_http3_field_view_t,
    pub headers_count: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_response_head_view_t {
    pub status: u16,
    pub content_length: coquic_http3_optional_u64_t,
    pub headers: *const coquic_http3_field_view_t,
    pub headers_count: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_request_view_t {
    pub head: coquic_http3_request_head_view_t,
    pub body: coquic_bytes_view_t,
    pub trailers: *const coquic_http3_field_view_t,
    pub trailers_count: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_response_view_t {
    pub interim_heads: *const coquic_http3_response_head_view_t,
    pub interim_head_count: usize,
    pub head: coquic_http3_response_head_view_t,
    pub body: coquic_bytes_view_t,
    pub trailers: *const coquic_http3_field_view_t,
    pub trailers_count: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_client_response_event_t {
    pub stream_id: coquic_stream_id_t,
    pub request: coquic_http3_request_view_t,
    pub response: coquic_http3_response_view_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_client_request_error_event_t {
    pub stream_id: coquic_stream_id_t,
    pub request: coquic_http3_request_view_t,
    pub application_error_code: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_server_request_cancelled_event_t {
    pub stream_id: coquic_stream_id_t,
    pub has_head: u8,
    pub head: coquic_http3_request_head_view_t,
    pub body: coquic_bytes_view_t,
    pub trailers: *const coquic_http3_field_view_t,
    pub trailers_count: usize,
    pub application_error_code: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_http3_error_t {
    pub code: coquic_http3_error_code_t,
    pub stream_id: coquic_optional_stream_id_t,
    pub detail_buffer: *mut c_char,
    pub detail_buffer_capacity: usize,
    pub detail_length: usize,
    pub detail_truncated: u8,
}

extern "C" {
    pub fn coquic_ffi_abi_version() -> u32;
    pub fn coquic_transport_config_init(config: *mut coquic_transport_config_t);
    pub fn coquic_endpoint_config_init(config: *mut coquic_endpoint_config_t);
    pub fn coquic_client_connection_config_init(config: *mut coquic_client_connection_config_t);
